--- a/styles/modals.css
+++ b/styles/modals.css
@@ -13,6 +13,7 @@
   background-color: #222222;
   /* text-align: center; */
   opacity: 0;
+  overflow: hidden;
   /* overflow-y: scroll; */
   visibility: hidden;
   color: var(--lightBlue);
@@ -57,22 +58,20 @@
   }
 }
 
-.modalTitle {
-  margin-bottom: 10px;
-  display: flex;
-  width: 60%;
-  justify-content: space-between;
-  align-items: center;
-  /* font-size: 20px; */
-}
+
 
 .modalHeader {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 97%;
-  margin-top: 4px;
-  margin-bottom: 10px;
+  width: 100%;
+  /* margin-top: 4px; */
+  padding-top: 4px;
+  /* padding-bottom: 10px; */
+  position: sticky;
+  top: 0%;
+  background-color: #222222;
+
   /* padding-bottom: 1%; */
   /* border-bottom: solid 2px rgba(227, 97, 32, .6); */
 }
@@ -81,24 +80,43 @@
   margin: 0;
 }
 
+.modalTitle {
+  margin-bottom: 10px;
+  display: flex;
+  width: 60%;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 1.5%;
+  /* font-size: 20px; */
+}
+
+.headerLinks {
+  margin-left: 1.5%;
+}
+
 .modalBody {
   display: block;
   width: 97%;
   height: 93%;
-  padding-top: 6px;
+  /* padding-top: 6px; */
 }
 
 .closeBtn {
   cursor: pointer;
   position: absolute;
-  top: 0.6%;
+  top: 14.5%;
   right: 0.75%;
-  height: 3%;
+  height: 47.5%;
   filter: invert(100%);
-  max-height: 25px;
+  max-height: 22.5px;
 }
 
 .closeBtn:hover {
   transform: scale(120%)
 }
 
+hr {
+  border-color:rgba(227, 97, 32, 0.8);
+  width: 99%;
+  /* position: sticky; */
+}
